--- a/code/package.json
+++ b/code/package.json
@@ -1,15 +1,12 @@
 {
 	"name": "nodejs-appbuilder",
-	"version": "1.0.2",
+	"version": "1.1.1",
 	"description": "Builder API Express",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"files": [
 		"dist"
 	 ],
-	"engines": {
-		"node": "16.x"
-	},
 	"scripts": {
 		"test": "STAGE=test SERVICE_NAME=test REGION=sa-east-1 jest --ignore=node_modules",
 		"test:watch": "LOG_DISABLED=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache --watchAll",
@@ -35,13 +32,14 @@
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.2",
+		"@types/supertest": "2.0.10",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.4.1",
 		"dotenv": "^12.0.4",
 		"jest": "^27.4.7",
 		"prettier": "^2.6.0",
-		"supertest": "^6.2.1",
+		"supertest": "4.0.2",
 		"ts-jest": "^27.1.3",
 		"ts-loader": "^9.2.8",
 		"ts-node": "^10.7.0",
