--- a/code/package.json
+++ b/code/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "nodejs-appbuilder",
-	"version": "1.1.8",
+	"version": "1.1.9",
 	"description": "Builder API Express",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -25,10 +25,7 @@
 	"dependencies": {
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
-		"express": "^4.17.3",
-		"pino": "^7.9.2",
-		"pino-pretty": "^7.5.4",
-		"slugify": "^1.6.5"
+		"express": "^4.17.3"
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.2",
